fix contrasto

--- a/styles/home.css
+++ b/styles/home.css
@@ -1,5 +1,5 @@
 .gradient-card {
-    background: linear-gradient(-45deg, #ee7752, #e73c7e, #23a6d5, #23d5ab);
+    background: linear-gradient(-45deg, #DB3B0A, #E31C68, #1A7EA2, #1D8500);
     background-size: 400% 400%;
     animation: gradient 15s ease infinite;
     height: 40vh;
